--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./build/app.js",
-    "watch": "tsc -w -p Source"
+    "start:dev": "nodemon ./build/app.js",
+    "watch": "tsc -w"
   },
   "dependencies": {
-    "@types/node": "^14.14.10",
-    "typescript": "^4.1.2"
+    "@types/node": "^13.9.3",
+    "@types/express": "^4.17.9",
+    "express": "^4.17.1",
+    "typescript": "^3.9.2"
   },
   "devDependencies": {
-    "ts-node": "^9.0.0",
     "nodemon": "^2.0.4"
   }
 }
